# scheduler_remote

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  apiVersion v1.txt  deployment.md  offline_deployment.md  offline_docker_deployment.md  pyproject.toml  requirements.txt  skubeconfig.yaml
app/: __init__.py  main.py
app/api/v1/: __init__.py  bind.py  filter.py  network.py  network_info.py  pods.py  resource_status.py  route_info.py  scheduler.py  task_planning.py  utils.py
app/core/: __init__.py  app_state.py  config.py  k8s_config.py  websocket_manager.py
app/schemas/: __init__.py  bind.py  common.py  computing_power.py  filter.py  network.py  network_info.py  pods.py  priority.py  resource_status.py  route_info.py  task_planning.py
app/services/: __init__.py  bind_service.py  computing_power_service.py  filter_service.py  k8s_service.py  network_info_service.py  network_service.py  optimizer.py  pods_service.py  rl_agent.py  route_info_service.py  scheduler.py  scheduling_plan_store.py  task_planning_service.py  udp_service.py
app/utils/: resource_parser.py
config/: scheduler-config.yaml
examples/: task_planning_example.json
k8s/: service-account.yaml
tests/: test-pods.yaml  test_api.py  test_cases.md
